baml_language/crates/baml_tests/snapshots/diagnostic_errors/duplicate_method_no_cascade/baml_tests__diagnostic_errors__duplicate_method_no_cascade__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR ===
class user.Box {
}
function user.repro(box: user.Box) -> int  [expr] {
  {  } box.value()
}
function user.value(self: ?) -> int  [expr] {
  {  } 1
}
function user.value(self: ?) -> string  [expr] {
  {  } "hello"
}
