baml_language/crates/baml_tests/snapshots/diagnostic_errors/duplicate_method_no_cascade/baml_tests__diagnostic_errors__duplicate_method_no_cascade__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.Box {
}
function user.Box.value(self: user.Box) -> int throws never {
  { : 1
    1 : 1
  }
}
function user.Box.value(self: user.Box) -> string throws never {
  { : "hello"
    "hello" : "hello"
  }
}
function user.repro(box: user.Box) -> int throws never {
  { : unknown
    box.value() : unknown
  }
}
class user.Box$stream {
}
