baml_language/crates/baml_tests/snapshots/diagnostic_errors/duplicate_method_no_cascade/baml_tests__diagnostic_errors__duplicate_method_no_cascade__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [hir] error: Duplicate method `Box.value`
   ╭─[ main.baml:6:14 ]
   │
 2 │     function value(self) -> int {
   │              ──┬──  
   │                ╰──── first defined as method here
   │ 
 6 │     function value(self) -> string {
   │              ──┬──  
   │                ╰──── duplicate method definition
   │ 
   │ Note: Error code: E0012
───╯
